--- a/project/New folder/src/Assests/Navbar.css
+++ b/project/New folder/src/Assests/Navbar.css
@@ -1,3 +1,30 @@
+body{
+  background: #D66D75; 
+  background: -webkit-linear-gradient(to right, #E29587, #D66D75);  
+  background: linear-gradient(to right, #E29587, #D66D75); 
+}  
 .home:hover{
     background-color: #44A08D;
 }
+.image-container {
+    display: inline-block;
+    overflow: hidden;
+  }
+  
+  .hover-image {
+    width: 300px; 
+    height: auto;
+    transition: transform 0.3s ease-in-out; 
+    transform: scale(1);
+  }
+  
+  .hover-image:hover {
+    transform: scale(1.1); 
+  }
+  .img{
+    box-shadow: 10px 10px 10px black;
+    margin: 0%;
+  }
+
+
+/* ------------------------------------------------------------------------------------------ */
